fix switch pwd visibility error

--- a/frontend/src/assets/css/login.css
+++ b/frontend/src/assets/css/login.css
@@ -86,6 +86,10 @@
     top: 30%;            
 }
 
+.forminput>.hide {
+    display: none;
+}
+
 svg path {
     pointer-events: none;
 }
@@ -97,6 +101,7 @@ svg path {
 form .button {
     margin: 20px auto;
 }
+
 
 @media (max-width:955px) {
     #inputarea {
